build/log/idf_py_stdout_output_12208
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.1.1-2\proj\wifi\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/wifi.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/build/config -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_phy/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.1-2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/wifi.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\wifi.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/wifi.c.obj -c C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c
In file included from C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:4:
C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_event/include/esp_event_loop.h:2:2: warning: #warning "esp_event_loop.h is deprecated, please include esp_event.h instead" [-Wcpp]
    2 | #warning "esp_event_loop.h is deprecated, please include esp_event.h instead"
      |  ^~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c: In function 'app_main':
C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:61:9: error: expected '=' before '{' token
   61 |     .sta{
      |         ^
In file included from C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/include/esp_intr_alloc.h:11,
                 from C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/include/esp_cpu.h:20,
                 from C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_hw_support/include/spinlock.h:11,
                 from C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:74,
                 from C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:59,
                 from C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:71,
                 from C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:2:
C:/Espressif/frameworks/esp-idf-v5.1.1-2/components/esp_common/include/esp_err.h:116:28: error: expected '}' before 'do'
  116 | #define ESP_ERROR_CHECK(x) do {                                         \
      |                            ^~
C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:65:5: note: in expansion of macro 'ESP_ERROR_CHECK'
   65 |     ESP_ERROR_CHECK(esp_wifi_set_config(ESP_IF_WIFI_STA, &sta_config));
      |     ^~~~~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:60:30: note: to match this '{'
   60 |   wifi_config_t sta_config = {
      |                              ^
C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:69:17: warning: unused variable 'ap_config' [-Wunused-variable]
   69 |   wifi_config_t ap_config = {
      |                 ^~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1.1-2/proj/wifi/main/wifi.c:60:17: warning: unused variable 'sta_config' [-Wunused-variable]
   60 |   wifi_config_t sta_config = {
      |                 ^~~~~~~~~~
ninja: build stopped: subcommand failed.
